apps/base/default/jsonrpc-rest-bridge/jsonrpc-rest-bridge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsonrpc-rest-bridge-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 'jsonrpc-rest-bridge.example.com'
    secretName: jsonrpc-rest-bridge-tls
  rules:
  - host: jsonrpc-rest-bridge.example.com
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: jsonrpc-rest-bridge-service
            port:
              number: 80
